# terraria-world-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
.github/workflows/: ci.yml
data/: block_data.csv  blocks.csv  item_prefixes.csv  items.csv  names.csv  npcs.csv  tile_frames.csv  wall_info.csv  walls.csv
docs/: book.toml
docs/src/: README.md  SUMMARY.md  terraria-world-file.md
src/: lib.rs  main.rs  reader.rs  tile.rs  world.rs  writer.rs
src/world/: bestiary.rs  chest.rs  coordinates.rs  entity.rs  enums.rs  environment.rs  error.rs  game_progression.rs  invasions.rs  item.rs  journey_powers.rs  mob.rs  npc.rs  pointers.rs  pressure_plate.rs  room.rs  saved_npcs.rs  sign.rs  tile.rs  tile_entity.rs  weather_events.rs
tests/: README.md  integration_test.py  integration_tests.rs  run_integration_tests.sh  world_roundtrip_tests.rs
