[package]
name = "terraria-world-parser"
version = "1.0.4"
edition = "2021"
authors = ["osbm <osbm@osbm.dev>"]
description = "A simple Terraria world file (.wld) parser library"
license = "MIT"
repository = "https://github.com/osbm/terraria-world-parser-rust"
keywords = ["terraria", "world", "parser", "game"]
categories = ["game-development", "parsing"]

[dependencies]
chrono = "0.4.41"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

