[package]
name = "terraria-world"
version = "1.0.8"
edition = "2021"
authors = ["osbm <osbm@osbm.dev>"]
description = "A simple Terraria world file (.wld) parser library"
license = "MIT"
repository = "https://github.com/osbm/terraria-world-parser-rust"
documentation = "https://osbm.dev/terraria-world-rs"
keywords = ["terraria", "world", "parser", "game"]
categories = ["game-development", "parsing"]
exclude = ["docs/", "*.nix", ".github", ".envrc", "flake.lock"]

[dependencies]
chrono = "0.4.41"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

